2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Fix Windows build.

2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Fix Ubuntu compilation error.

2008-10-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/index.cpp:
		Disable generation of new index format for now.

2008-10-10  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/index.cpp:
	* src/index.h:
	* src/mpgfile.h:
		Show picture related infos (slightly changed index format!)
 
2008-10-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.h:
	* src/mpegmuxer.cpp:
		Return false if writing fails.

2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
		Improve ffmpeg/libswscale handling.
 
2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
	* install-sh:
	* makefile.in:
	* mkinstalldirs:
	* src/Makefile.in:
		New files.

2008-05-18  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Use size_t instead of unsigned int.

2008-03-31  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix Windows build (patch by Ralph Glasstetter).

2008-03-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h:
	* src/main.cpp:
	* src/stream.h:
	* src/streamdata.h:
		Yet another ffmpeg interface change.

2008-03-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Add missing #include <cassert> (thanks, Wolfram).

2008-03-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Mark audio streams in first pass, renumber in second.

2008-03-21  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
	* src/dvbcut.cpp:
		Windows compile fixes.
		
2008-03-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp: