@@ -1,3 +1,8 @@
+2008-10-26  Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/index.cpp:
+		Fix writing of new index format.
+
 2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/buffer.cpp:
